--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "Arkangel",
+  "name": "arkangel",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
-    "test:e2e": "nightwatch"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "^2.0.1",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.12",
-    "@nuxt/typescript-build": "^2.0.4",
-    "@nuxtjs/tailwindcss": "^3.4.2",
-    "chromedriver": "^88.0.0",
-    "nightwatch": "^1.5.1"
+    "@nuxtjs/tailwindcss": "^3.4.2"
   }
 }
