--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxtjs/firebase": "^7.5.0",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "firebase": "^8.2.9",
+    "nuxt": "^2.14.12",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.4.2"
